# textadept-debugger

./: .hgtags  CMakeLists.txt  Makefile  README.md  init.lua  luasocket.patch
.github/workflows/: release.yml
ansi_c/: init.lua
gdb/: init.lua
go/: init.lua
lua/: init.lua
lua/socket/: README
